# eproj

./: Cargo.toml  README.md
crates/eproj/: Cargo.toml  README.md
crates/eproj-cli/: Cargo.toml  README.md
crates/eproj-cli/src/: cli.rs  error.rs  main.rs
crates/eproj-cli/src/commands/: test.rs
crates/eproj-core/: Cargo.toml  README.md
crates/eproj-core/src/: coordinate.rs  error.rs  lib.rs  projection.rs  srid.rs
crates/eproj-core/src/bindings/: README.md  mod.rs  proj.rs
crates/eproj/src/: lib.rs
