[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.12"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/eproj"

[workspace.dependencies]
thiserror = "2.0.17"
anyhow = "1.0.100"
clap = "4.5.53"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
nalgebra = "0.34.1"
rayon = "1.11.0"
# proj = "0.30.0"
proj-sys = "0.27.0"
num-traits = "0.2.19"
libc = "0.2.178"
