[package]
name = "eproj-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for coordinate reference system transformations."


[dependencies]
eproj = { version = "0.0.1-alpha.9", path = "../eproj" }

thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }


[[bin]]
name = "eproj"
path = "src/main.rs"
