[package]
name = "eproj"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for coordinate reference system transformations."


[dependencies]
eproj-core = { version = "0.0.1-alpha.9", path = "../eproj-core" }
